# strings

./: .gitignore  CMakeLists.txt  readme.md  run.sh
include/: log.h  regman.h  smemman.h  sstring.h  strings.h
src/: 1.c  log.c  old_strings.c  registry.c  smemman.c  sstring.c  strings.c
test/: run.sh  test.c
